--------------------------------------------------------------------------------
Changes for 1.9.7

New features:
 - [ZBX-1357] updated Dutch, German, Japanese, Russian, and Ukrainian translations; thanks to Zabbix translators (Richlv)

--------------------------------------------------------------------------------
Changes for 1.9.6

New features:
 - [ZBXNEXT-747] added direct SNMP trap monitoring for snmptrapd and embed perl or SNMPTT (Eduard, rudolfs, Vedmak)
 - [ZBX-4116] fixed ibm_db2 update patch for help_items table (rudolfs)
 - [ZBXNEXT-895] redesign general->Macros (Eduard)
 - [ZBXNEXT-899] redesign general->Images (Eduard)
 - [ZBXNEXT-785] support of automatic selection of map icon element depending on element type (Vedmak,Eduard)
 - [ZBX-3683] removed the obsolete item zabbix[log] (Sasha)
 - [ZBXNEXT-891] redesign general->Value mapping (Eduard)
 - [ZBXNEXT-889] redesign general->Regular expressions (Eduard)
 - [ZBXNEXT-885] redesign general->Housekeeper, Working time and Other (Eduard)
 - [ZBXNEXT-871] redesign general->gui (Eduard)
 - [ZBX-1357] updated German, Japanese, Latvian, Polish, Russian, Turkish and Ukrainian translations; thanks to Zabbix translators (Richlv)
 - [ZBXNEXT-863] renamed "host profile" to "host inventory" (dimir)

Bug fixes:
 - [ZBX-3647] fixed parsing of parameter in external scripts to work like in normal keys and added support for multiline output (Sasha)
 - [ZBX-2530] renamed "system.cpu.util" item parameters for solaris from "wait" to "iowait", from "kernel" to "system" (deniss)
 - [ZBX-4049] fixed memory leak in configuration syncer (rudolfs)
 - [ZBX-4017] fixed host deletion using api (Vedmak)
 - [ZBX-4029,ZBX-4037] fixed inconsistent and untranslatable strings in frontend and clarified frontend messages (Richlv)
 - [ZBX-4010] fixed undefined constant SVC_SNMPv2 in discovery action conditions (Richlv)
 - [ZBX-3775] fixed html formatting in Overview (Eduard)