@@ -251,12 +251,18 @@ class CGraphDraw{
 
 		$str.=$this->period2str($this->period);
 
-		$fontnum = 11;
-		if(($this->sizeX < 500) && ($this->type == GRAPH_TYPE_NORMAL || $this->type == GRAPH_TYPE_BAR)) $fontnum = 8;
-		$dims = imageTextSize( $fontnum, 0, $str );
-		$x = $this->fullSizeX/2-($dims['width']/2);
+// Calculate largest font size that can fit graph header
+// TODO: font size must be dynamic in other parts of the graph as well, like legend, timeline, etc
+		for($fontsize = 11; $fontsize > 7; $fontsize--)
+		{
+			$dims = imageTextSize( $fontsize, 0, $str );
+			$x = $this->fullSizeX/2-($dims['width']/2);
+// Most important information must be displayed, period can be out of the graph
+			if($x < 2)	$x = 2;
+			if($dims['width'] <= $this->fullSizeX) break;
+		}
 
-		imagetext($this->im, $fontnum, 0, $x, 24, $this->getColor($this->graphtheme['textcolor'], 0), $str);
+		imageText($this->im, $fontsize, 0, $x, 24, $this->getColor($this->graphtheme['textcolor'], 0), $str);
 	}
 
 	public function setHeader($header){
